0.1.3
-----
  * support S390 dump format

0.1.2
-----
  * all compression libraries are now optional
  * live source uses VMCOREINFO from the running kernel (if available)
  * full vtop translation for x86_64

0.1.1
-----
  * add missing files
  * fix compiler warnings

0.1
---
  * first public release